Pankaj Latest new

--- a/DigiChamps/Web.config
+++ b/DigiChamps/Web.config
@@ -14,6 +14,13 @@
     <add key="PreserveLoginUrl" value="true"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <!--Email send-->
+    <add key="smtpServer" value="smtp.gmail.com"/>
+    <add key="smtpPort" value="587"/>
+    <add key="smtpUsername" value="teameporwal@gmail.com"/>
+    <add key="smtpPassword" value="eporwal@1234"/>
+    <add key="smtpDisplayName" value="Digi Champ"/>
+    
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -100,7 +107,7 @@
     </assemblyBinding>
   </runtime>
 
-     <connectionStrings>
+  <connectionStrings>
     <add name="DigiChampsEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=67.225.129.92;initial catalog=test_digichamps;user id=testuid;password=D12!@!igi!!@;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
 
 
